--- a/boards/shields/ffkb/ffkb.conf
+++ b/boards/shields/ffkb/ffkb.conf
@@ -25,7 +25,7 @@ CONFIG_I2C=y
 CONFIG_ZMK_MOUSE=y
 
 # for logging, remove later
-# CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_USB_LOGGING=y
 
 # trying this for problematic BLE on oE of my machines
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
