--- a/boards/shields/ffkb/ffkb.conf
+++ b/boards/shields/ffkb/ffkb.conf
@@ -2,8 +2,8 @@
 # SPDX-License-Identifier: MIT
 
 # Enable Encoders
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+#CONFIG_EC11=y
+#CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Enable underglow
 #CONFIG_ZMK_RGB_UNDERGLOW=y
@@ -28,4 +28,4 @@ CONFIG_ZMK_MOUSE=y
 #CONFIG_ZMK_USB_LOGGING=y
 
 # trying this for problematic BLE on oE of my machines
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+#CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
