--- a/build.yaml
+++ b/build.yaml
@@ -4,14 +4,9 @@
 # control, add individual board + shield combinations to
 # the `include` property, e.g:
 #
-# board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
-# include:
-#   - board: bdn9_rev2
-#   - board: nice_nano_v2
-#     shield: reviung41
-#
 ---
 include:
   - board: nice_nano_v2
-    shield: ffkb
+    shield: cholibri_left nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: cholibri_right nice_view_adapter nice_view
