--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: ffkb
-#     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
-#     artifact-name: ffkb_with_logging
+    shield: cholibri_left nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: cholibri_right nice_view_adapter nice_view
