--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: cholibri_left nice_view_adapter nice_view
+    shield: cholibri_left 
   - board: nice_nano_v2
-    shield: cholibri_right nice_view_adapter nice_view
+    shield: cholibri_right
