--- a/boards/shields/cholibri/cholibri.dtsi
+++ b/boards/shields/cholibri/cholibri.dtsi
@@ -35,3 +35,39 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)                  RC(2,6) RC(2,7)
     };
 
 };
+// From Pete: https://discord.com/channels/719497620560543766/845285481888743434/1206181117296644106
+&pro_micro_i2c {
+    status = "okay";
+    glidepoint: glidepoint@2a {
+        compatible = "cirque,pinnacle";
+        reg = <0x2a>;
+        status = "okay";
+        dr-gpios = <&gpio0 8 (GPIO_ACTIVE_HIGH)>;
+
+        sensitivity = "2x";
+        sleep;
+//      no-taps;
+    };
+
+    // Rotation config, from Pete
+    // This will change in the future
+    // https://discord.com/channels/719497620560543766/845285481888743434/1206407883777114182
+    input_config {
+        compatible = "zmk,input-configs";
+    
+        cirque_config {
+            device = <&glidepoint>;
+//          xy-swap;
+            y-invert;
+//          x-invert;
+        };
+    };
+};
+
+// for logging, remove later
+// &usbd {
+//     status = "okay";
+//     cdc_acm_uart: cdc_acm_uart {
+//         compatible = "zephyr,cdc-acm-uart";
+//     };
+// };
